@@ -1,0 +1,49 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+ <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Flot Examples</title>
+    <link href="layout.css" rel="stylesheet" type="text/css"></link>
+    <!--[if IE]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
+    <script language="javascript" type="text/javascript" src="../jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="../jquery.flot.js"></script>
+    <script language="javascript" type="text/javascript" src="../jquery.flot.symbol.js"></script>
+ </head>
+ <body>
+    <h1>Flot Examples</h1>
+
+    <div id="placeholder" style="width:600px;height:300px"></div>
+
+    <p>Various point types. Circles are built-in. For other
+    point types, you can define a little callback function to draw the
+    symbol; some common ones are available in the symbol plugin.</p>
+
+<script id="source" language="javascript" type="text/javascript">
+$(function () {
+    function generate(offset, amplitude) {
+        var res = [];
+        var start = 0, end = 10;
+        for (var i = 0; i <= 50; ++i) {
+            var x = start + i / 50 * (end - start);
+            res.push([x, amplitude * Math.sin(x + offset)]);
+        }
+        return res;
+    }
+
+    var data = [
+        { data: generate(2, 1.8), points: { symbol: "circle" } },
+        { data: generate(3, 1.5), points: { symbol: "square" } },
+        { data: generate(4, 0.9), points: { symbol: "diamond" } },
+        { data: generate(6, 1.4), points: { symbol: "triangle" } },
+        { data: generate(7, 1.1), points: { symbol: "cross" } }
+    ];
+
+    $.plot($("#placeholder"), data, {
+        series: { points: { show: true, radius: 3 } },
+        grid: { hoverable: true }
+    });
+});
+</script>
+
+ </body>
+</html>
